--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ build/
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+assets/*
+.gradle/*
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
