--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,15 @@ dependencies:
   video_player: ^0.7.2
   http: ^0.12.0
   googleapis: ^0.52.0+1
-
+  splashscreen: ^1.1.0
+  audioplayer: ^0.5.0
+  googleapis_auth: ^0.2.6
+  flutter_launcher_icons: ^0.7.0
+  
+flutter_icons:
+  android: true 
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 dev_dependencies:
   flutter_test:
